Bug 959912 - fix build break on gonk-kk caused by different log header. r=mwu